Fix typekit flicker

--- a/wp-content/themes/cbdo/resources/scss/site.scss
+++ b/wp-content/themes/cbdo/resources/scss/site.scss
@@ -1,3 +1,28 @@
+// fade in typekit async text to hide flicker
+h1,h2,h3,h4 {
+		opacity: 0;
+		transition: opacity .7s;
+
+		&.fade-in {
+			opacity: 1;
+		}
+}
+p,li,span {
+		opacity: 0;
+		transition: opacity .7s .6s;
+
+		&.fade-in {
+			opacity: 1;
+		}
+}
+a:not(.block-header__sitelink) {
+		opacity: 0;
+		transition: opacity .7s .3s;
+
+		&.fade-in {
+			opacity: 1;
+		}
+}
 body {
 	background-color: $BG_COLOR;
 	font-family: Helvetica, sans-serif;
